# utfconv

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/utf/: utf.hpp
src/: utf.cpp  version.cpp  version.hpp.in
tests/: utf8_unittest.cpp
